// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-round btn sc-kgoBCf iQjcqO"
    size="md"
  >
    <div />
    <span
      aria-hidden={true}
      className="fa fa-"
    />
  </button>
</span>
`;

exports[`When using snapshots Should render with the inactive prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-round sc-kGXeez hirLKB"
    size="md"
  >
    <div />
    <span
      aria-hidden={true}
      className="fa fa-"
    />
  </button>
</span>
`;

exports[`When using snapshots Should render with the loading prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="loading md shape-round btn sc-kgoBCf iQjcqO"
    size="md"
  >
    <div
      className="centered sc-bxivhb gIwMIC"
    >
      <div>
        <div
          className="sc-htpNat dgPYRj"
        />
        
      </div>
    </div>
  </button>
</span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-square btn sc-kgoBCf iQjcqO"
    size="md"
  >
    <div />
    <span
      aria-hidden={true}
      className="fa fa-"
    />
  </button>
</span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="xs shape-round btn sc-kgoBCf dWxlTU"
    size="xs"
  >
    <div />
    <span
      aria-hidden={true}
      className="fa fa-"
    />
  </button>
</span>
`;

exports[`When using snapshots Should render with the type prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-round btn sc-kpOJdX gEiUGl"
    size="md"
  >
    <div />
    <span
      aria-hidden={true}
      className="fa fa-"
    />
  </button>
</span>
`;
